test-utils/proc-macros/tests/compile-fail/modern_with_postgres.stderr
error: 'modern' version set is only valid for mysql
 --> tests/compile-fail/modern_with_postgres.rs:5:22
  |
5 | #[upstream(postgres, modern)]
  |                      ^^^^^^
